--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -24,7 +24,20 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Increase timeouts for long-running backend work (download/extract/decoder)
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 600s;
+        send_timeout 600s;
+
+        # Avoid buffering to stream data progressively (helpful for long responses)
+        proxy_request_buffering off;
+        proxy_buffering off;
     }
+
+    # Allow larger uploads when needed (upload ELF, encoded logs)
+    client_max_body_size 512m;
 }
 
 
