--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,6 +9,14 @@ services:
     build:
       context: .
       dockerfile: Backend/Dockerfile.backend
+    environment:
+      # Expect DATABASE_URL in cloud; for demo keep MySQL style if needed.
+      # JWT secret should be provided securely in production.
+      - JWT_SECRET=${JWT_SECRET:-change-me}
+      # By-URL Job TTL/cleanup (recommended defaults; override via env/secret store)
+      - BYURL_JOB_FINISHED_TTL=30m
+      - BYURL_JOB_RUNNING_TTL=12h
+      - BYURL_JOB_REAPER_INTERVAL=1m
     healthcheck:
       test: ["CMD-SHELL", "curl -fsS http://localhost:8080/healthz || exit 1"]
       interval: 10s
